{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 32,
  "lineage": "61eec948-503f-b96f-0449-03d9d1eaedee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0390537d0d92515a0",
            "arn": "arn:aws:ec2:us-east-1:975049942001:elastic-ip/eipalloc-0390537d0d92515a0",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0d8adf08fbbdd5d3e",
            "domain": "vpc",
            "id": "eipalloc-0390537d0d92515a0",
            "instance": "i-0cfb403f614609eea",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04b4731a204c571bf",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-98-83-74-85.compute-1.amazonaws.com",
            "public_ip": "98.83.74.85",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.dev1",
            "aws_network_interface.dev1-nic",
            "aws_security_group.dev1-access",
            "aws_subnet.dev1-aws_subnet",
            "aws_vpc.dev1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev1_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:975049942001:instance/i-0cfb403f614609eea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfb403f614609eea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04b4731a204c571bf"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b4731a204c571bf",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "98.83.74.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d2d0aa72bbd70ccc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3501a188f55e8e0",
            "tags": {
              "Name": "dev1"
            },
            "tags_all": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-006465cdbfbff9d92"
            ]
          },
          "dependencies": [
            "aws_network_interface.dev1-nic",
            "aws_security_group.dev1-access",
            "aws_subnet.dev1-aws_subnet",
            "aws_vpc.dev1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049942001:internet-gateway/igw-0ea7c90320c11e3e5",
            "id": "igw-0ea7c90320c11e3e5",
            "owner_id": "975049942001",
            "vpc_id": "vpc-0cd0e95bfa26ff512"
          },
          "dependencies": [
            "aws_vpc.dev1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "dev1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049942001:network-interface/eni-04b4731a204c571bf",
            "attachment": [
              {
                "attachment_id": "eni-attach-09839e6e82d6c34a0",
                "device_index": 0,
                "instance": "i-0cfb403f614609eea"
              }
            ],
            "id": "eni-04b4731a204c571bf",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:89:d8:28:45:2d",
            "owner_id": "975049942001",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-006465cdbfbff9d92"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3501a188f55e8e0"
          },
          "dependencies": [
            "aws_security_group.dev1-access",
            "aws_subnet.dev1-aws_subnet",
            "aws_vpc.dev1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev1-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049942001:route-table/rtb-0c9f6fc256a223a38",
            "id": "rtb-0c9f6fc256a223a38",
            "owner_id": "975049942001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea7c90320c11e3e5",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea7c90320c11e3e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev1"
            },
            "tags_all": {
              "Name": "dev1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd0e95bfa26ff512"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev1",
            "aws_vpc.dev1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev1-route-assocication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a436784de923496c",
            "route_table_id": "rtb-0c9f6fc256a223a38",
            "subnet_id": "subnet-0a3501a188f55e8e0"
          },
          "dependencies": [
            "aws_internet_gateway.dev1",
            "aws_route_table.dev1-route_table",
            "aws_subnet.dev1-aws_subnet",
            "aws_vpc.dev1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev1-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049942001:security-group/sg-006465cdbfbff9d92",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006465cdbfbff9d92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web_traffic_allowance",
            "name_prefix": "",
            "owner_id": "975049942001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev1"
            },
            "tags_all": {
              "Name": "dev1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd0e95bfa26ff512"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev1-aws_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049942001:subnet/subnet-0a3501a188f55e8e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3501a188f55e8e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049942001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev1"
            },
            "tags_all": {
              "Name": "dev1"
            },
            "vpc_id": "vpc-0cd0e95bfa26ff512"
          },
          "dependencies": [
            "aws_vpc.dev1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049942001:vpc/vpc-0cd0e95bfa26ff512",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c9126c3c9c42acb",
            "default_route_table_id": "rtb-02bd2284711720ee0",
            "default_security_group_id": "sg-060ccad322604da13",
            "dhcp_options_id": "dopt-0a072bc01d452f216",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cd0e95bfa26ff512",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bd2284711720ee0",
            "owner_id": "975049942001",
            "tags": {
              "Name": "dev1"
            },
            "tags_all": {
              "Name": "dev1"
            }
          }
        }
      ]
    }
  ]
}